--- a/src/components/Covid19/Background/style.css
+++ b/src/components/Covid19/Background/style.css
@@ -1,9 +1,9 @@
 .header {
-    z-index: -1;
+    z-index: 1;
     position:absolute;
     width: 100%;
     text-align:center;
-    background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
+    /*background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);*/
     color:white;
 }
 
