--- a/src/components/Covid19/Ticker/style.css
+++ b/src/components/Covid19/Ticker/style.css
@@ -9,20 +9,20 @@
     padding: 0;
     position: absolute;
     z-index: 800;
-    top: -5%;
+    top: -10%;
+    right: 3%;
 }
 
 .scroll-marquee {
     font-size: 1rem;
     display: inline-block;
-    padding: .7rem 1.4rem;
     position: relative;
     transform: translateX(100%);
-    animation: marquee 8.5s linear  infinite forwards;
+    animation: marquee 9.5s linear  infinite forwards;
 }
 
 .scroll-marquee:last-child {
-    animation: marquee 8.5s linear -4.5s infinite forwards;
+    animation: marquee 9.5s linear -9.5s infinite forwards;
     left: 0;
     position: absolute;
     top: 0;
