--- a/src/components/Covid19/Countries/style.css
+++ b/src/components/Covid19/Countries/style.css
@@ -5,19 +5,6 @@
     position: relative;
 }
 
-body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-    font-size: 2vmin;
-}
-
-html {
-    color: #fff;
-    overflow: hidden;
-}
-
 
 .slides {
     display: grid;
@@ -39,7 +26,7 @@ html {
     top: 20%;
     transition: opacity 0.3s;
     opacity: 0.5;
-    z-index: 4;
+    z-index: 1;
 }
 
 .slides > button:hover {
@@ -63,10 +50,7 @@ html {
     width: 30vw;
     height: 40vw;
     border-radius: 7px;
-    background: black;
-    /*background-size: cover;*/
-    /*background-position: center center;*/
-    /*background-repeat: no-repeat;*/
+    background: linear-gradient(0deg, black, #444444);
     transition: transform 0.5s ease-in-out;
     opacity: 0.7;
     display: flex;
@@ -80,32 +64,16 @@ html {
 .slideContentInner {
     height: 100%;
     width: 100%;
-    padding-top: 32px;
+    padding: 16px;
     transform-style: preserve-3d;
-    transform: translateZ(2rem);
+    transform: translateZ(0.3rem);
     transition: opacity 0.3s linear;
-    text-shadow: 0 0.1rem 1rem #000;
     opacity: 0;
     font-size: 1.5rem;
     font-weight: normal;
     letter-spacing: 0.2ch;
     text-transform: uppercase;
     margin: 0;
-}
-
-.slideBackground {
-    position: fixed;
-    top: 0;
-    left: -10%;
-    right: -10%;
-    bottom: 0;
-    background-size: cover;
-    background-position: center center;
-    z-index: -1;
-    opacity: 0;
-    transition: opacity 0.3s linear, transform 0.3s ease-in-out;
-    pointer-events: none;
-    transform: translateX(calc(10% * var(--dir)));
 }
 
 .slide[data-active] {
@@ -120,6 +88,7 @@ html {
 
 .slide[data-active] .slideContentInner {
     opacity: 1;
+    color: white;
 }
 
 .slide[data-active] .slideContent {
